# sensorpanel

./: .gitignore  .golangci.yml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  PLAN.md  README.md  SESSION_STATE.md  TODO.md  analyze_device.py  benchmark_fps.py  coverage.out  diagnose.py  diagnose2.py  diagnose3.py  diagnose4.py  diagnose5.py  discover_commands.py  discover_protocol.py  find_usb.ps1  flake.nix  go.mod  go.sum  main.go  pyproject.toml  release-please-config.json  test_blit_only.py  test_dpfax.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_device.md
.github/workflows/: ci.yml  release.yml
axdisplay/: __init__.py  __main__.py  config.py  device.py  protocol.py  renderer.py  sensors.py
axdisplay/themes/: __init__.py  dark.py  light.py
cmd/: benchmark.go  device.go  panel.go  prune.go  root.go  run.go  sensor.go  service.go  theme.go
docs/: adding-devices.md  creating-themes.md  media-modes.md
magefiles/: magefile.go
pkg/animation/: gif.go  gif_test.go
pkg/browser/: browser.go  renderer.go
pkg/config/: config.go  config_test.go  discovery.go
pkg/device/: generator.go  generator_test.go  generic.go  generic_test.go  profile.go  profile_test.go  qtkeji.go  qtkeji_test.go  registry.go  registry_test.go
pkg/music/: dashboard.go  lyrics_cache.go  lyrics_cache_test.go  monitor_linux.go  monitor_linux_test.go  monitor_other.go
pkg/panel/: device.go  protocol.go  protocol_test.go  updater.go  updater_test.go
pkg/paths/: paths.go  paths_darwin.go  paths_linux.go  paths_test.go  (+1 more)
(+49 files in other folders)
